# rest_scenario_mock

./: .dockerignore  .gitignore  CI_CD_README.md  Dockerfile  Dockerfile.rest  QUICKSTART_REST.md  README.md  README_CICD_GITHUB_ACTION.md  README_REST.md  actions.md  docker-compose.frontend.yml  docker-compose.rest.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml  frontend-cd.yml
.kilo/plans/: comprehensive-project-audit.md  docker-compose-frontend-backend.md  frontend-backend-api-integration.md  troubleshoot-stale-docs.md
deploy-vr-scenario/: .env.production  README.md  docker-compose.yml
documents/: GRDF_Procedure_Consignation_Deconsignation.docx
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  docx2txt  jsondiff  jsonpatch  jsonpointer
faiss_index/: index.faiss  index.pkl
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.dev  babel-plugin-vite-env.cjs  babel.config.cjs  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
scenarios/basculement-mode-bypass-maintenance/: session.json
scenarios/erreur-scenario-non-disponible/: session.json
tests/: test_config.py  test_documents.py  test_integration.py  test_json_converter.py  test_llm.py  test_pipeline.py  test_prompts.py  test_rest_server.py  test_rest_server_extended.py  test_scenario.py  test_scenario_store.py  test_vectorstore.py
vr_scenario_lib/: __init__.py  config.py  documents.py  json_converter.py  llm.py  pipeline.py  prompts.py  rest_server.py  scenario.py  scenario_store.py  vectorstore.py
(+61 files in other folders)
