[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'  # <-- Notez l'utilisation des guillemets simples ici
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | node_modules           
  | frontend/node_modules  
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vr_scenario_lib"]

[build-system]
requires = ["setuptools>=45", "wheel"]  #, "setuptools_scm[toml]>=6.2"
build-backend = "setuptools.build_meta"
