[metadata]
name = vr_scenario_lib
version = 0.1.0
description = Génération de scénarios de formation VR via RAG

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
# Indique à setuptools de n'empaqueter QUE vr_scenario_lib (et d'ignorer scenarios, documents, tests, etc.)
include =
    vr_scenario_lib
    vr_scenario_lib.*

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    env,
    venv,
    .venv
max-line-length = 88
extend-ignore = E203, W503, E501, E402, F824, E265, W293